[package]
name = "rscbcorex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-rustls = "0.25"
futures = "0.3.30"
log = "0.4.20"
uuid = { version = "1.7.0", features = ["v4"] }
