[package]
name = "rscbcorex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-rustls = "0.25"
thiserror = "1.0"
futures = "0.3.30"
log = "0.4.20"
uuid = { version = "1.7.0", features = ["v4"] }
byteorder = "1.5"
bytes = "1.5.0"
hmac = "0.12"
sha2 = "0.10"
scram-rs = "0.10"   # In time we might want to implement our own client.

[dev-dependencies]
env_logger = "0.11"
