[package]
name = "rscbcorex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-rustls = "0.25"
thiserror = "1.0"
futures = "0.3.30"
log = "0.4.20"
uuid = { version = "1.7.0", features = ["v4"] }
byteorder = "1.5"
bytes = "1.5.0"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
rand = "0.9.0-alpha.1"
base64 = "0.22.1"

[dev-dependencies]
env_logger = "0.11"

[lints.rust]
# This is temporary whilst we build out the root modules.
unused = "allow"
