[package]
name = "couchbase-sys"
version = "1.0.0-alpha.4" # remember to update html_root_url
authors = ["Michael Nitschinger <michael.nitschinger@couchbase.com>"]
build = "build.rs"
links = "libcouchbase"
license = "Apache-2.0"
keywords = ["couchbase", "database", "ffi", "libcouchbase"]
categories = ["database", "asynchronous", "external-ffi-bindings"]
description = "Rust bindings to the libcouchbase C Couchbase SDK."
repository = "https://github.com/couchbaselabs/couchbase-rs"
homepage = "https://github.com/couchbaselabs/couchbase-rs"
documentation = "https://docs.rs/couchbase-sys"
edition = "2018"

[dependencies]
openssl-sys = "0.9.55"

[build-dependencies]
cmake = "0.1"

[build-dependencies.bindgen]
version = "0.52"
default-features = false
features = ["logging", "runtime", "which-rustfmt"]

[features]
default = []

# If you want to build and link libcouchbase statically, set this flag.
link-static = []