[package]
name = "couchbase"
version = "1.0.0-alpha.3"
authors = ["Michael Nitschinger <michael@nitschinger.at>"]
edition = "2018"
build = "build.rs"
license = "Apache-2.0"
keywords = ["couchbase", "database", "libcouchbase"]
categories = ["database", "asynchronous"]
description = "The official Couchbase Rust SDK."
repository = "https://github.com/couchbaselabs/couchbase-rs"
homepage = "https://github.com/couchbaselabs/couchbase-rs"
documentation = "https://docs.rs/couchbase"

[dependencies]
snafu = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
futures = "0.3"
log = "0.4"
parse_duration = "2.0"
couchbase-sys = { path = "../couchbase-sys", optional = true }

[build-dependencies]
cc = { version = "1.0", optional = true }

[dev-dependencies]
env_logger = "0.7"

[features]
# By default, the libcouchbase (C) backend is used. More will be available in the future
default = ["libcouchbase"]
# The libcouchbase C backend will be compiled and used
libcouchbase = ["couchbase-sys", "cc"]
# If enabled, exposes all APIs currently marked as uncomitted
uncomitted = []
# If enabled, exposes all APIs currently marked as volatile or uncomitted
volatile = ["uncomitted"]