[package]
name = "couchbase"
version = "1.0.0-alpha.4" # remember to update html_root_url
authors = ["Michael Nitschinger <michael@nitschinger.at>"]
edition = "2018"
build = "build.rs"
license = "Apache-2.0"
keywords = ["couchbase", "database", "libcouchbase"]
categories = ["database", "asynchronous"]
description = "The official Couchbase Rust SDK."
repository = "https://github.com/couchbaselabs/couchbase-rs"
homepage = "https://github.com/couchbaselabs/couchbase-rs"
documentation = "https://docs.rs/couchbase"

[dependencies]
snafu = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_urlencoded = "0.6"
futures = "0.3"
log = "0.4"
parse_duration = "2.0"
uuid = { version = "0.8", features = ["v4"] }
couchbase-sys = { path = "../couchbase-sys", version = "=1.0.0-alpha.4", optional = true }
crossbeam-channel = { version = "0.4", optional = true }

[build-dependencies]
cc = { version = "1.0", optional = true }

[dev-dependencies]
env_logger = "0.7"
lazy_static = "1.4"
async-std = "1.5"

[features]
# By default, the libcouchbase (C) backend is used. More will be available in the future
default = ["libcouchbase"]
# The libcouchbase C backend will be compiled and used
libcouchbase = ["couchbase-sys", "cc", "crossbeam-channel"]
# Libcouchbase will be built and linked statically
libcouchbase-static = ["couchbase-sys/link-static"]
# If enabled, exposes all APIs currently marked as uncomitted
uncomitted = []
# If enabled, exposes all APIs currently marked as volatile or uncomitted
volatile = ["uncomitted"]
