[package]
name = "couchbase"
version = "1.0.0-alpha.5" # remember to update html_root_url
authors = ["Michael Nitschinger <michael@nitschinger.at>"]
edition = "2018"
build = "build.rs"
license = "Apache-2.0"
keywords = ["couchbase", "database", "libcouchbase"]
categories = ["database", "asynchronous"]
description = "The official Couchbase Rust SDK."
repository = "https://github.com/couchbaselabs/couchbase-rs"
homepage = "https://github.com/couchbaselabs/couchbase-rs"
documentation = "https://docs.rs/couchbase"

[dependencies]
snafu = "0.8.2"
serde = "1.0.197"
serde_json = "1.0.115"
serde_derive = "1.0.197"
serde_urlencoded = "0.7.1"
urlencoding = "2.1.3"
futures = "0.3.30"
log = "0.4.21"
parse_duration = "2.1.1"
uuid = { version = "1.8.0", features = ["v4"] }
couchbase-sys = { path = "../couchbase-sys", version = "=1.0.0-alpha.5", optional = true }
crossbeam-channel = { version = "0.5.12", optional = true }
chrono = "0.4.37"
mockall = "0.12.1"
cfg-if = "1.0.0"

[build-dependencies]
cc = { version = "1.0.92", optional = true }

[dev-dependencies]
env_logger = "0.11.3"
lazy_static = "1.4"
async-std = "1.12"
toml = "0.8.12"
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.3", features = ["json"] }
bytes = "1.6.0"
structopt = "0.3.26"
strum = "0.26.2"
strum_macros = "0.26.2"

[features]
# By default, the libcouchbase (C) backend is used. More will be available in the future
default = ["libcouchbase"]
# The libcouchbase C backend will be compiled and used
libcouchbase = ["couchbase-sys", "cc", "crossbeam-channel"]
# Libcouchbase will be built and linked statically
libcouchbase-static = ["couchbase-sys/link-static"]
# If enabled, exposes all APIs currently marked as uncomitted
uncomitted = []
# If enabled, exposes all APIs currently marked as volatile or uncomitted
volatile = ["uncomitted", "couchbase-sys/volatile"]

[[test]]
name = "test"
path = "integration/main.rs"
harness = false
