[package]
name = "couchbase_connstr"
version = "0.1.0"
edition = "2021"

[dependencies]
form_urlencoded = "1.2.1"
hickory-resolver = { version = "0.24.1", features = ["dns-over-rustls"], default-features = false }
log = "0.4.22"
regex = "1.11.0"
url = "2.5.2"

[dev-dependencies]
tokio = { version = "1.40", features = ["rt", "net", "macros"] }
