[package]
name = "couchbase_core"
version = "0.1.0"
edition = "2021"

[dependencies]
arc-swap = "1.7"
async-trait = "0.1.80"
base64 = "0.22.1"
bitflags = "2.6.0"
byteorder = "1.5"
bytes = "1.5.0"
chrono = "0.4"
crc32fast = "1.4.2"
futures = "0.3.30"
hmac = "0.12"
http = "1.1.0"
lazy_static = "1.5.0"
log = "0.4.20"
rand = "0.9.0-beta.0"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json", "stream"], default-features = false }
sha1 = "0.10"
sha2 = "0.10"
snap = "1.1"
url = "2.5.2"
uuid = { version = "1.7.0", features = ["v4"] }

dhat = { version = "0.3.3", optional = true }
futures-core = "0.3.30"

serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.120", features = ["raw_value"] }

tokio = { version = "1.38", features = ["full"] }
tokio-io = { version = "0.2.0-alpha.6", features = ["util"] }
tokio-native-tls = { version = "0.3", optional = true }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7", features = ["codec"] }

tokio-rustls = { version = "0.26.0", optional = true }

[dev-dependencies]
chrono = "0.4.38"
env_logger = "0.11"
envconfig = "0.10"

couchbase_connstr = { path = "../couchbase-connstr" }

[features]
dhat-heap = ["dhat"]

default = ["default-tls"]
default-tls = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls", "dep:tokio-rustls"]
native-tls = ["reqwest/native-tls", "dep:tokio-native-tls"]

[lints.rust]
# This is temporary whilst we build out the root modules.
unused = "allow"
