[package]
name = "couchbase-core"
version = "1.0.0-beta.1"
edition = "2021"
description = "Couchbase SDK core networking and protocol implementation, not intended for direct use"
license = "Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/couchbaselabs/couchbase-rs"
authors = [
    "Charles Dixon <charles.dixon@couchbase.com>",
    "Matt Wozakowski <matt.wozakowski@couchbase.com>",
    "Will Broadbelt <william.broadbelt@couchbase.com>"
]

[dependencies]
arc-swap = "1.7"
async-trait = "0.1.89"
base64 = "0.22.1"
bitflags = "2.9.4"
byteorder = "1.5"
bytes = "1.10.1"
chrono = "0.4"
crc32fast = "1.5.0"
futures = "0.3.31"
hmac = "0.12"
http = "1.3.1"
lazy_static = "1.5.0"
log = "0.4.28"
rand = "0.9.2"
regex = "1.11.3"
reqwest = { version = "0.12.23", features = ["json", "stream"], default-features = false }
sha1 = "0.10"
sha2 = "0.10"
snap = "1.1"
socket2 = "0.6.0"
url = "2.5.7"
urlencoding = "2.1.3"
uuid = { version = "1.18.1", features = ["v4"] }

dhat = { version = "0.3.3", optional = true }
futures-core = "0.3.31"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["raw_value"] }

tokio = { version = "1.47", features = ["full"] }
tokio-io = { version = "0.2.0-alpha.6", features = ["util"] }
tokio-native-tls = { version = "0.3", optional = true }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7", features = ["codec"] }

tokio-rustls = { version = "0.26.4", optional = true }

[dev-dependencies]
chrono = "0.4.42"
env_logger = "0.11"
envconfig = "0.10"
serial_test = "3.2.0"

couchbase-connstr = { path = "../couchbase-connstr", version = "1.0.0-beta.1" }

[features]
dhat-heap = ["dhat"]

default = ["default-tls"]
default-tls = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls", "dep:tokio-rustls"]
native-tls = ["reqwest/native-tls", "dep:tokio-native-tls"]

[lints.rust]
# This is temporary whilst we build out the root modules.
unused = "allow"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "symbol-mangling-version=v0"]
