[package]
name = "couchbase-core"
version = "1.0.0"
edition = "2021"
description = "Couchbase SDK core networking and protocol implementation, not intended for direct use"
license = "Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/couchbaselabs/couchbase-rs"
authors = [
    "Charles Dixon <charles.dixon@couchbase.com>",
    "Matt Wozakowski <matt.wozakowski@couchbase.com>",
    "Will Broadbelt <william.broadbelt@couchbase.com>"
]

[dependencies]
arc-swap = "1.8"
async-trait = "0.1.89"
base64 = "0.22.1"
bitflags = "2.11"
byteorder = "1.5"
bytes = "1.11"
chrono = "0.4.44"
crc32fast = "1.5"
futures = "0.3.32"
hmac = "0.12.1"
http = "1.4"
lazy_static = "1.5"
rand = "0.10.0"
regex = "1.12"
reqwest = { version = "0.13.2", features = ["json", "stream"], default-features = false }
sha1 = "0.10.6"
sha2 = "0.10.9"
snap = "1.1"
socket2 = "0.6.3"
tracing = { version = "0.1.44", features = ["log"] }
url = "2.5"
urlencoding = "2.1"
uuid = { version = "1.22", features = ["v4"] }

dhat = { version = "0.3.3", optional = true }
futures-core = "0.3.32"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }

tokio = { version = "1.50", features = ["full"] }
tokio-native-tls = { version = "0.3.1", optional = true }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["codec"] }

tokio-rustls = { version = "0.26.4", optional = true }

[dev-dependencies]
chrono = "0.4.44"
env_logger = "0.11.9"
envconfig = "0.11.1"
log = "0.4.29"
serial_test = "3.4"
tracing-subscriber = "0.3.22"

couchbase-connstr = { path = "../couchbase-connstr", version = "1.0.0-beta.1" }

[features]
dhat-heap = ["dhat"]

default = ["default-tls"]
default-tls = ["rustls-tls"]
rustls-tls = ["reqwest/rustls", "dep:tokio-rustls"]
native-tls = ["reqwest/native-tls", "dep:tokio-native-tls"]

# Enables top-level observability spans and metrics in the core agent operations.
# Disabling this reduces async state machine depth for users who do not need it.
top-level-spans = []

[lints.rust]
# This is temporary whilst we build out the root modules.
unused = "allow"
