[package]
name = "couchbase"
version = "1.0.0-beta.1"
edition = "2021"
description = "The community supported Couchbase Rust SDK, currently in development"
license = "Apache-2.0"
readme = "../../README.md"
keywords = ["couchbase", "database", "json", "nosql"]
repository = "https://github.com/couchbaselabs/couchbase-rs"
authors = [
    "Charles Dixon <charles.dixon@couchbase.com>",
    "Matt Wozakowski <matt.wozakowski@couchbase.com>",
    "Will Broadbelt <william.broadbelt@couchbase.com>"
]

[dependencies]
bytes = "1.11.1"
chrono = "0.4.42"
futures = "0.3.31"
hdrhistogram = "7.5.4"
http = "1.3.1"
lazy_static = "1.5.0"
log = "0.4.28"
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
uuid = { version = "1.18.1", features = ["v4"] }
webpki-roots = "1.0.3"

couchbase-connstr = { path = "../couchbase-connstr", version = "1.0.0-beta.1" }
couchbase-core = { path = "../couchbase-core", default-features = false, version = "1.0.0-beta.1" }
rustls-pemfile = { version = "2.2", optional = true }

tokio = { version = "1.47" }
tokio-native-tls = { version = "0.3", optional = true }
tokio-rustls = { version = "0.26.4", optional = true }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[dev-dependencies]
chrono = "0.4"
criterion = { version = "0.7.0", features = ["html_reports", "async_tokio", "async"] }
env_logger = "0.11"
envconfig = "0.11.0"
rand = "0.9.2"
serde_json = { version = "1.0", features = ["raw_value"] }
serde_yaml = "0.9.34"
serial_test = "3.2.0"
tokio = "1.47"

[features]
default = ["default-tls"]
default-tls = ["rustls-tls"]
rustls-tls = ["dep:tokio-rustls", "couchbase-core/rustls-tls", "dep:rustls-pemfile"]
native-tls = ["dep:tokio-native-tls", "couchbase-core/native-tls"]

# Volatile: This feature is subject to change at any time
# Enables options for DNS-SRV bootstrap.
unstable-dns-options = []

# Uncomitted: This feature may change in the future
# Allows explicit construction of the Error type e.g. for mocking purposes.
unstable-error-construction = []

internal = []

[lints.rust]
# This is temporary whilst we build out the root modules.
unused = "allow"

[lib]
bench = false

[[bench]]
name = "collection_crud"
harness = false

[[bench]]
name = "ci"
harness = false
