[package]
name = "couchbase"
version = "1.0.0-beta.1"
edition = "2021"
description = "The community supported Couchbase Rust SDK, currently in development"
license = "Apache-2.0"
readme = "../../README.md"
keywords = ["couchbase", "database", "json", "nosql"]
repository = "https://github.com/couchbaselabs/couchbase-rs"
authors = [
    "Charles Dixon <charles.dixon@couchbase.com>",
    "Matt Wozakowski <matt.wozakowski@couchbase.com>",
    "Will Broadbelt <william.broadbelt@couchbase.com>"
]

[dependencies]
bytes = "1.11"
chrono = "0.4.44"
futures = "0.3.32"
hdrhistogram = "7.5"
http = "1.4"
lazy_static = "1.5"
rustls-pki-types = { version = "1.14", optional = true }
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
uuid = { version = "1.22", features = ["v4"] }
webpki-roots = "1.0"

couchbase-connstr = { path = "../couchbase-connstr", version = "1.0.0-beta.1" }
couchbase-core = { path = "../couchbase-core", default-features = false, version = "1.0.0-beta.1" }

tokio = { version = "1.50" }
tokio-native-tls = { version = "0.3.1", optional = true }
tokio-rustls = { version = "0.26.4", optional = true }
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = "0.3.22"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports", "async_tokio", "async"] }
envconfig = "0.11.1"
rand = "0.10.0"
serde_json = { version = "1.0", features = ["raw_value"] }
serde_yaml = "0.9.33"
serial_test = "3.4"
tokio = "1.50"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[features]
default = ["default-tls"]
default-tls = ["rustls-tls"]
rustls-tls = ["dep:tokio-rustls", "couchbase-core/rustls-tls", "dep:rustls-pki-types"]
native-tls = ["dep:tokio-native-tls", "couchbase-core/native-tls"]
# Note that we do not use feature flags to indicate API stability level.
# Instead, unstable features are marked with comments indicating uncommitted or volatile stability levels.

internal = []

[lints.rust]
# This is temporary whilst we build out the root modules.
unused = "allow"

[lib]
bench = false

[[bench]]
name = "collection_crud"
harness = false

[[bench]]
name = "ci"
harness = false
