[package]
name = "protostellar"
version = "0.1.0"
edition = "2021"

[dependencies]
glob = { version = "0.3.1", optional = true }
prost = "0.13"
prost-types = "0.13.1"
tonic = "0.12"
tonic-build = { version = "0.12", optional = true }

[features]
genprotos = ["tonic-build", "glob"]

# Usage: cargo run --features=genprotos genprotos
[[bin]]
name = "genprotos"
required-features = ["genprotos"]
